# bonito-nrf52840-zigbee

./: .gitignore  README.md  blackmagicprobe.sh  build-light-bulb-docker.sh  build-light-bulb.sh  build-nice-nano-bootloader.sh  build-temp-sensor-debug30.sh  build-temp-sensor-sleepy.sh  build-temp-sensor.sh  docker-ncs-shell.sh  flash-nice-nano-bootloader-bmp.sh
app/light_bulb_local/: CMakeLists.txt  pm_static.yml  prj.conf
app/light_bulb_local/include/: zb_dimmable_light.h  zb_on_off_light.h
app/light_bulb_local/src/: main.c
app/temp_sensor_local/: CMakeLists.txt  pm_static.yml  prj.conf  prj_sleepy.conf
app/temp_sensor_local/include/: zb_temp_sensor.h
app/temp_sensor_local/src/: main.c
boards/others/nice_nano_v2/: Kconfig.defconfig  Kconfig.nice_nano_v2  arduino_pro_micro_pins.dtsi  board.cmake  board.yml  nice_nano_v2-pinctrl.dtsi  nice_nano_v2.yaml  nice_nano_v2_flash_uf2.dtsi  nice_nano_v2_nrf52840_common.dts  nice_nano_v2_nrf52840_uf2.dts  nice_nano_v2_nrf52840_uf2.yaml
boards/others/promicro_nrf52840/: Kconfig.defconfig  Kconfig.promicro_nrf52840  board.yml  promicro_nrf52840-pinctrl.dtsi  promicro_nrf52840.yaml  promicro_nrf52840_nrf52840.dts  promicro_nrf52840_nrf52840_common.dts  promicro_nrf52840_nrf52840_defconfig  promicro_nrf52840_nrf52840_uf2.dts  promicro_nrf52840_nrf52840_uf2.yaml  promicro_nrf52840_nrf52840_uf2_defconfig
nfrsdk/: leeeme.txt
nfrsdk/boards/nicenano/nicenano/: Kconfig.defconfig  board.yml  (+3 more)
overlays/: light_bulb_nice_nano.overlay  light_bulb_promicro.overlay  temp_sensor_nice_nano.overlay  temp_sensor_promicro.overlay
